# explicit-memory-private

./: .gitignore  .gitmodules  Let's simplify the above code.md  README.md  apache-janusgraph copy.ipynb  apache-janusgraph.ipynb  brainstorming.ipynb  example-agent.ipynb  humemai.ttl  setup.cfg
.github/workflows/: docs.yaml  pytest.yaml
apache-jena/: data.ttl  query.rq
configs/: gremlin-server.yaml
examples/: example-janus-agent copy.ipynb  example-janus-agent.ipynb  example-rdflib-agent.ipynb  example.txt
examples/co-learning/: README.md  graph-learning-humemai.ipynb  graph-learning0.ipynb  graph-learning1.ipynb  graph_learning.py  janus.ipynb  ontology.ttl  raw-data.json
examples/co-learning/rdf-data/: 000.ttl  001.ttl  002.ttl  003.ttl  004.ttl  005.ttl  006.ttl  007.ttl  008.ttl  009.ttl  010.ttl  011.ttl  012.ttl  013.ttl  014.ttl  015.ttl  016.ttl  017.ttl  018.ttl  019.ttl  020.ttl  021.ttl  022.ttl  023.ttl  (+187 more)
examples/configs/: janusgraph.properties
examples/janus-graph-parse-text/: Llama-3.1-8B-Instruct-4bit.json  Llama-3.1-8B-Instruct-8bit.json  Llama-3.2-1B-Instruct-16bit.json  Llama-3.2-1B-Instruct-4bit.json  Llama-3.2-1B-Instruct-8bit.json  Llama-3.2-3B-Instruct-16bit.json  Llama-3.2-3B-Instruct-4bit.json  Llama-3.2-3B-Instruct-8bit.json  example-janus-agent.ipynb
examples/wikidata/: wikidata.ipynb
examples/wikidata-as-semantic/: wikidata-as-semantic.ipynb
humemai/: __init__.py  humemai.ttl  memory.py  memory_system.py  utils.py
humemai/agent/: example.py
humemai/janusgraph/: __init__.py  docker-compose-cql-es.yml  humemai.py
humemai/prompt/: __init__.py  prompt.py  templates.py
humemai/rdflib/: humemai.py
humemai/utils/: docker.py
test/: test_memory.py  test_memory_system.py
test/apache_jena/: test_docker_jena.py
test/janusgraph/: test_docker_dummy.py  test_get_memories_by_type.py  test_humemai.py  test_humemai_basic.py  test_utils_docker.py  test_utils_gremlin.py
test/rdflib/: test_memory_rdflib others.py  test_memory_rdflib short_term.py  test_memory_rdflib.py  test_memory_rdflib_basic.py  test_memory_rdflib_count.py  test_memory_rdflib_episodic.py  test_memory_rdflib_event.py  test_memory_rdflib_filters.py  test_memory_rdflib_get_methods.py  test_memory_rdflib_long_term.py  test_memory_rdflib_modify_strength.py  test_memory_rdflib_retrieval.py  test_memory_system_rdflib.py
(+29 files in other folders)
