[metadata]
name = humemai
version = 2.2.0
author = Taewoon Kim
author_email = info@humem.ai
description = A Machine With Human-Like Memory Systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/humemai/humemai
project_urls =
    Bug Tracker = https://github.com/humemai/humemai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires=
    rdflib
    docker
    sparqlwrapper
    nest_asyncio
    gremlinpython
    transformers
    torch

[options.extras_require]
dev =
    black
    black[jupyter]
    flake8
    mdformat
    isort
    pytest
    ipython
    ipykernel
    tqdm
    huggingface_hub[cli]
    accelerate

[options.packages.find]
exclude =
    test*
